# aixTextEditor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
.github/workflows/: release.yml
Casks/: aix-text-editor.rb
Formula/: aixtexteditor.rb
src/: App.tsx  aiActions.ts  api.ts  caret.ts  diff.ts  fileActions.ts  index.css  slides.test.ts  slides.ts  store.test.ts  store.ts  types.ts  useShortcuts.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  cli.rs  commands.rs  deck.rs  error.rs  fileio.rs  lib.rs  main.rs  menu.rs  models.rs  net.rs  pptx.rs  settings.rs
src/components/: ChunkAiMenu.tsx  ChunkView.tsx  DraftModal.tsx  Editor.tsx  ErrorBoundary.tsx  HelpModal.tsx  MermaidChunk.tsx  NetworkPanel.tsx  PromptModal.tsx  SelectionBar.tsx  SettingsModal.tsx  SlideEditor.tsx  TabBar.tsx  Toasts.tsx  Toolbar.tsx  Tooltip.tsx  icons.tsx
