[package]
name = "aix-text-editor"
version = "1.1.0"
description = "AIX Text Editor — LLM-augmented chunk-based editor for papers and reports"
authors = ["Satoshi Kume"]
license = "Artistic-2.0"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aix_text_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
# rustls avoids a system OpenSSL/native-tls dependency, keeping the build portable.
# `stream` enables byte-stream responses for SSE token streaming (Draft).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
# OS-native secret storage: macOS Keychain / Windows Credential Manager / Linux Secret Service.
# Each backend is target-gated inside the crate, so listing all is safe cross-platform.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
thiserror = "2"
# Async sleep for backoff between API retries (uses Tauri's existing tokio runtime).
tokio = { version = "1", features = ["time"] }
# Best-effort text extraction from PDF reference material (Draft attachments).
pdf-extract = "0.7"

[profile.release]
# Smaller, faster-to-ship desktop binaries.
codegen-units = 1
lto = true
opt-level = "s"
strip = true
